# rpi-nintendo-classic-controller

./: .gitignore  CMakeLists.txt  README.md  i2c-classic-controller.c
service/: 99-nintendo-i2c-controller.rules  nintendo-i2c-controller.service
